Add splitter config for recursive splitter

--- a/example/extract/extract_pdf_with_recursive_splitter.ipynb
+++ b/example/extract/extract_pdf_with_recursive_splitter.ipynb
@@ -70,7 +70,7 @@
     "import pandas as pd\n",
     "import pprint\n",
     "from uniflow.flow.client import ExtractClient, TransformClient\n",
-    "from uniflow.flow.config import TransformOpenAIConfig, ExtractPDFConfig\n",
+    "from uniflow.flow.config import TransformOpenAIConfig, ExtractPDFConfig, SplitterConfig\n",
     "from uniflow.op.model.model_config import OpenAIModelConfig, NougatModelConfig\n",
     "from uniflow.op.prompt import PromptTemplate, Context\n",
     "from uniflow.op.extract.split.splitter_factory import SplitterOpsFactory\n",
@@ -136,26 +136,23 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/uniflow/lib/python3.10/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3526.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = [\n",
     "    {\"filename\": input_file},\n",
     "]\n",
     "\n",
+    "splitter_config = SplitterConfig(\n",
+    "            max_chunk_size = 1024,\n",
+    "            splitter_func = RECURSIVE_CHARACTER_SPLITTER\n",
+    "        )\n",
+    "splitter_config.chunk_overlap_size = 5\n",
+    "\n",
     "config = ExtractPDFConfig(\n",
     "    model_config=NougatModelConfig(\n",
     "        batch_size = 1 # When batch_size>1, nougat will run on CUDA, otherwise it will run on CPU\n",
     "    ),\n",
-    "    splitter=RECURSIVE_CHARACTER_SPLITTER,\n",
+    "    splitter_config=splitter_config,\n",
     ")\n",
     "nougat_client = ExtractClient(config)"
    ]
@@ -176,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:05<00:00,  5.07s/it]\n"
+      "100%|██████████| 1/1 [00:03<00:00,  3.23s/it]\n"
      ]
     }
    ],
