pass in api key

--- a/example/extract/extract_pdf_nougat_qa.ipynb
+++ b/example/extract/extract_pdf_nougat_qa.ipynb
@@ -49,7 +49,16 @@
    "execution_count": 2,
    "id": "8d84dd70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Pumpkinfries\\anaconda3\\envs\\uniflow\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -128,18 +137,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "919fc6e025704ea1b5fb92536fc65e71",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:04<00:00,  4.01s/it]\n"
+     ]
     }
    ],
    "source": [
@@ -182,7 +184,7 @@
        "     'Our work is philosophically similar to Razavian et al. (2014) which showed that for image classification, feature extractors obtained from a pre-trained deep learning model perform well on a variety of tasks--including tasks that are very different from the original task for which the feature extractors were trained.',\n",
        "     '## 2 Model',\n",
        "     'The model architecture, shown in figure 1, is a slight variant of the CNN architecture of Collobert et al. (2011). Let \\\\(\\\\mathbf{x}_{i}\\\\in\\\\mathbb{R}^{k}\\\\) be the \\\\(k\\\\)-dimensional word vector corresponding to the \\\\(i\\\\)-th word in the sentence. A sentence of length \\\\(n\\\\) (padded where']}],\n",
-       "  'root': <uniflow.node.Node at 0x7f19f09f2e00>}]"
+       "  'root': <uniflow.node.Node at 0x1fd98a69ba0>}]"
       ]
      },
      "execution_count": 6,
@@ -543,9 +545,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "uniflow",
    "language": "python",
-   "name": "pytorch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
