--- a/example/extract/extract_pdf_openparser.ipynb
+++ b/example/extract/extract_pdf_openparser.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:18<00:00, 18.96s/it]"
+      "100%|██████████| 1/1 [00:12<00:00, 12.92s/it]"
      ]
     },
     {
@@ -133,6 +133,7 @@
     "config = ExtractPDFConfig(\n",
     "    model_config=OpenParserModelConfig(\n",
     "        model_name = \"CambioML/open-parser\",\n",
+    "        api_key = os.getenv(\"CAMBIO_API_KEY\"),\n",
     "    ),\n",
     ")\n",
     "openparser_client = ExtractClient(config)\n",
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -161,10 +162,10 @@
        "     '## 2 Model',\n",
        "     'The model architecture, shown in figure 1, is a\\nslight variant of the CNN architecture of Collobert\\net al. (2011). Let X E Rk be the k-dimensional\\nword vector corresponding to the i-th word in the\\nsentence. A sentence of length n (padded where',\n",
        "     'https://code.google.com/p/word2vec/']}],\n",
-       "  'root': <uniflow.node.Node at 0x2448f70b1c0>}]"
+       "  'root': <uniflow.node.Node at 0x2481c104430>}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,6 +173,13 @@
    "source": [
     "output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
