--- a/example/extract/extract_pdf_unstructured.ipynb
+++ b/example/extract/extract_pdf_unstructured.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "e3f11527",
    "metadata": {},
    "outputs": [],
@@ -78,19 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "c1e762c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Pumpkinfries\\anaconda3\\envs\\uniflow\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from uniflow.flow.client import ExtractClient\n",
@@ -108,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "99c580fe",
    "metadata": {},
    "outputs": [],
@@ -128,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "f73e0c4c",
    "metadata": {},
    "outputs": [
@@ -136,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.15s/it]\n"
+      "100%|██████████| 1/1 [00:13<00:00, 13.67s/it]\n"
      ]
     }
    ],
@@ -157,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "52404e0b",
    "metadata": {},
    "outputs": [
@@ -181,10 +172,10 @@
        "     '2 Model',\n",
        "     'The model architecture, shown in ﬁgure 1, is a slight variant of the CNN architecture of Collobert Rk be the k-dimensional et al. (2011). Let xi 2 word vector corresponding to the i-th word in the sentence. A sentence of length n (padded where',\n",
        "     '1https://code.google.com/p/word2vec/']}],\n",
-       "  'root': <uniflow.node.Node at 0x1e5f7bf02b0>}]"
+       "  'root': <uniflow.node.Node at 0x1e5e488c3d0>}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
