Add a refactor trial.

--- a/example/transform/openai_html_QA_refactor.ipynb
+++ b/example/transform/openai_html_QA_refactor.ipynb
@@ -52,6 +52,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "True"
@@ -143,17 +151,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guided_prompt = PromptTemplate(\n",
-    "        instruction=\"Generate one question and its corresponding answer based on context. Following the format of the examples below to include the same context, question, and answer in the response.\",\n",
-    "        few_shot_prompt=[\n",
-    "            Context(\n",
-    "                context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
-    "                question=\"Who published A Mathematical Theory of Communication in 1948?\",\n",
-    "                answer=\"Claude E. Shannon.\",\n",
-    "            )\n",
-    "        ]\n",
-    ")\n",
-    "\n",
     "data = [ Context(context=p) for p in pages[2].page_content.split(\"\\n\\n\") if len(p) > 200]"
    ]
   },
@@ -166,9 +163,9 @@
     {
      "data": {
       "text/plain": [
-       "[Context(context='Any notion of information we develop must conform to this intuition.\\r\\nIndeed, in the next sections we will learn how to compute that these\\r\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\r\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\r\\ninformation respectively.'),\n",
-       " Context(context='If we read through these thought experiments, we see a natural idea. As\\r\\na starting point, rather than caring about the knowledge, we may build\\r\\noff the idea that information represents the degree of surprise or the\\r\\nabstract possibility of the event. For example, if we want to describe\\r\\nan unusual event, we need a lot information. For a common event, we may\\r\\nnot need much information.'),\n",
-       " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of\\r\\nCommunication (Shannon, 1948) establishing the theory of\\r\\ninformation. In his article, Shannon introduced the concept of\\r\\ninformation entropy for the first time. We will begin our journey here.')]"
+       "[Context(context='Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.'),\n",
+       " Context(context='If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.'),\n",
+       " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.')]"
       ]
      },
      "execution_count": 7,
@@ -191,37 +188,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c7f525c8",
+   "execution_count": null,
+   "id": "6ee8a4a0",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c7f525c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'extract': ['ExtractHTMLFlow', 'ExtractImageFlow', 'ExtractIpynbFlow', 'ExtractMarkdownFlow', 'ExtractPDFFlow', 'ExtractTxtFlow', 'ExtractGmailFlow'], 'transform': ['TransformAzureOpenAIFlow', 'TransformComparisonGoogleFlow', 'TransformComparisonOpenAIFlow', 'TransformCopyFlow', 'TransformGoogleFlow', 'TransformGoogleMultiModalModelFlow', 'TransformHuggingFaceFlow', 'TransformLMQGFlow', 'TransformOpenAIFlow'], 'rater': ['RaterFlow']}\n"
+     ]
+    }
+   ],
    "source": [
-    "config = TransformOpenAIConfig(\n",
-    "    prompt_template=guided_prompt,\n",
-    "    model_config=OpenAIModelConfig(response_format={\"type\": \"json_object\"}),\n",
-    ")\n",
-    "client = TransformClient(config)"
+    "client = TransformClient(name=\"TransformOpenAIFlow\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "e0f11245",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b0ea04b78894eeaa6f8d9dbff741125",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "json_object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:04<00:00,  1.57s/it]\n"
+     ]
     }
    ],
    "source": [
